--- a/site/cs/pl/Rust/app/index.html
+++ b/site/cs/pl/Rust/app/index.html
@@ -1019,9 +1019,63 @@
 <ul>
 <li>
 <p>关键字</p>
+<ul>
+<li>as - 强制类型转换，消除特定包含项的 trait 的歧义，或者对 use 和 extern crate 语句中的项重命名</li>
+<li>async - 返回一个 Future 而不是阻塞当前线程</li>
+<li>await - 暂停执行，直到 Future 的结果准备好</li>
+<li>break - 立刻退出循环</li>
+<li>const - 定义常量或不变裸指针（constant raw pointer）</li>
+<li>continue - 继续进入下一次循环迭代</li>
+<li>crate - 链接（link）一个外部 crate 或一个代表宏定义的 crate 的宏变量</li>
+<li>dyn - 动态分发 trait 对象</li>
+<li>else - 作为 if 和 if let 控制流结构的 fallback</li>
+<li>enum - 定义一个枚举</li>
+<li>extern - 链接一个外部 crate 、函数或变量</li>
+<li>false - 布尔字面量 false</li>
+<li>fn - 定义一个函数或 函数指针类型 (function pointer type)</li>
+<li>for - 遍历一个迭代器或实现一个 trait 或者指定一个更高级的生命周期</li>
+<li>if - 基于条件表达式的结果分支</li>
+<li>impl - 实现自有或 trait 功能</li>
+<li>in - for 循环语法的一部分</li>
+<li>let - 绑定一个变量</li>
+<li>loop - 无条件循环</li>
+<li>match - 模式匹配</li>
+<li>mod - 定义一个模块</li>
+<li>move - 使闭包获取其所捕获项的所有权</li>
+<li>mut - 表示引用、裸指针或模式绑定的可变性</li>
+<li>pub - 表示结构体字段、impl 块或模块的公有可见性- ref - 通过引用绑定</li>
+<li>return - 从函数中返回</li>
+<li>Self - 实现 trait 的类型的类型别名</li>
+<li>self - 表示方法本身或当前模块</li>
+<li>static - 表示全局变量或在整个程序执行期间保持其生命周期</li>
+<li>struct - 定义一个结构体</li>
+<li>super - 表示当前模块的父模块</li>
+<li>trait - 定义一个 trait</li>
+<li>true - 布尔字面量 true</li>
+<li>type - 定义一个类型别名或关联类型</li>
+<li>unsafe - 表示不安全的代码、函数、trait 或实现</li>
+<li>use - 引入外部空间的符号</li>
+<li>where - 表示一个约束类型的从句</li>
+<li>while - 基于一个表达式的结果判断是否进行循环</li>
+</ul>
 </li>
 <li>
-<p>保留字</p>
+<p>保留字 如下关键字没有任何功能，不过由 Rust 保留以备将来应用。</p>
+<ul>
+<li>abstract</li>
+<li>become</li>
+<li>box</li>
+<li>do</li>
+<li>final</li>
+<li>macro</li>
+<li>override</li>
+<li>priv</li>
+<li>try</li>
+<li>typeof</li>
+<li>unsized</li>
+<li>virtual</li>
+<li>yield</li>
+</ul>
 </li>
 </ul>
 
