--- a/site/math/maa/rn/index.html
+++ b/site/math/maa/rn/index.html
@@ -1608,10 +1608,10 @@
 </div>
 <div class="admonition note">
 <p class="admonition-title">(<span class="arithmatex">\(\mathrm{I}\)</span>,<span class="arithmatex">\(\mathrm{II}\)</span>)加法与乘法的联系</p>
-<p>乘法相对于加法满足分配律,即<span class="arithmatex">\(\forall x,y,z\in\R\)</span>,
-$$
+<p>乘法相对于加法满足分配律,即<span class="arithmatex">\(\forall x,y,z\in\R\)</span>,</p>
+<div class="arithmatex">\[
     (x+y)\cdot z = x\cdot z +y\cdot z
-$$</p>
+\]</div>
 </div>
 <p>如果在某集合<span class="arithmatex">\(G\)</span>上定义了满足上述全部公理的两种运算,则<span class="arithmatex">\(G\)</span>称为<strong>代数域</strong>,简称<strong>域</strong>.</p>
 <div class="admonition note">
@@ -1631,7 +1631,7 @@ $$</p>
   <small>
     
       最后更新:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2023年9月5日 20:31:13</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2023年9月6日 18:23:15</span>
       
         <br>
         创建日期:
