--- a/site/changelog/index.html
+++ b/site/changelog/index.html
@@ -1644,7 +1644,7 @@
             <div class="changelog-content">
 
 
-                  <p><span class="changelog-type changelog-type-newpage"></span> {'text': 'Mathematic > Mathematical Analysis > 新增 Universal Concept'}</p>
+                  <p><span class="changelog-type changelog-type-newpage"></span> <a href="/math/maa/uc/">Mathematic > Mathematical Analysis > 新增 Universal Concept</a></p>
 
 
 
