--- a/site/cs/index.html
+++ b/site/cs/index.html
@@ -1655,6 +1655,8 @@
 </ul>
 </li>
 <li><a href="al">Algorithm 算法</a></li>
+<li><a href="ds">Database Structure 数据结构</a></li>
+<li><a href="wp">WriteUp 题解记录</a></li>
 </ul>
 
   <hr>
@@ -1662,7 +1664,7 @@
   <small>
     
       最后更新:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2022年8月26日 23:28:48</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2023年9月11日 12:40:35</span>
       
         <br>
         创建日期:
