--- a/site/links/index.html
+++ b/site/links/index.html
@@ -1675,6 +1675,36 @@
     </a>
 </div>
 
+<div class="flink-list-item">
+    <a href="https://blog.gztime.cc/" title="GZTime's Blog" target="_blank">
+        <div class="flink-item-icon">
+            <img src="https://img1.imgtp.com/2023/09/24/GIxFb4KD.jpg" alt="">
+        </div>
+        <div class="flink-item-name heti-skip">GZTime's Blog</div>
+        <div class="flink-item-desc">GZ！网安佬</div>
+    </a>
+</div>
+
+<div class="flink-list-item">
+    <a href="https://shao.fun/" title="Shaofun's Blog" target="_blank">
+        <div class="flink-item-icon">
+            <img src="https://img1.imgtp.com/2023/09/24/t3dzOfma.jpg" alt="">
+        </div>
+        <div class="flink-item-name heti-skip">Shaofun's Blog</div>
+        <div class="flink-item-desc">烧风超强！</div>
+    </a>
+</div>
+
+<div class="flink-list-item">
+    <a href="https://zmx0142857.github.io/note/" title="Fran's Note" target="_blank">
+        <div class="flink-item-icon">
+            <img src="https://img1.imgtp.com/2023/09/24/loCuQEaX.jpg" alt="">
+        </div>
+        <div class="flink-item-name heti-skip">Fran's Note</div>
+        <div class="flink-item-desc">Fran笔记好全</div>
+    </a>
+</div>
+
 </div>
 
   <hr>
