--- a/site/links/index.html
+++ b/site/links/index.html
@@ -1144,7 +1144,7 @@
 <div class="flink-list-item">
     <a href="https://gaozqi.github.io/note/" title="Gaozqi's Note" target="_blank">
         <div class="flink-item-icon">
-            <img src="https://img1.imgtp.com/2023/09/06/LOpNxzjI.jpg" alt="">
+            <img src="../assets/GaoZQi.jpg" alt="">
         </div>
         <div class="flink-item-name heti-skip">GaoZQi's Note</div>
         <div class="flink-item-desc">老糕无敌！</div>
@@ -1154,7 +1154,7 @@
 <div class="flink-list-item">
     <a href="https://shzaiz.github.io" title="AUGPath's Note" target="_blank">
         <div class="flink-item-icon">
-            <img src="https://img1.imgtp.com/2023/09/06/qLuHow3d.jpg" alt="">
+            <img src="../assets/AUGPath.jpg" alt="">
         </div>
         <div class="flink-item-name heti-skip">AUGPath's Note</div>
         <div class="flink-item-desc">AUG 膜膜</div>
@@ -1164,7 +1164,7 @@
 <div class="flink-list-item">
     <a href="https://tonycrane.cc/" title="TonyCrane's Home" target="_blank">
         <div class="flink-item-icon">
-            <img src="https://img1.imgtp.com/2023/09/06/y6RDGBGR.jpg" alt="">
+            <img src="../assets/TonyCrane.jpg" alt="">
         </div>
         <div class="flink-item-name heti-skip">TonyCrane's Home</div>
         <div class="flink-item-desc">xgnb！</div>
@@ -1174,7 +1174,7 @@
 <div class="flink-list-item">
     <a href="https://matheart.github.io/matheart-note/" title="Matheart's Note" target="_blank">
         <div class="flink-item-icon">
-            <img src="https://img1.imgtp.com/2023/09/06/f1QBkNI4.jpg" alt="">
+            <img src="../assets/Matheart.jpg" alt="">
         </div>
         <div class="flink-item-name heti-skip">Matheart's Note</div>
         <div class="flink-item-desc">事阿数！好耶！</div>
@@ -1184,7 +1184,7 @@
 <div class="flink-list-item">
     <a href="https://blog.gztime.cc/" title="GZTime's Blog" target="_blank">
         <div class="flink-item-icon">
-            <img src="https://img1.imgtp.com/2023/09/24/GIxFb4KD.jpg" alt="">
+            <img src="../assets/GZTime.jpg" alt="">
         </div>
         <div class="flink-item-name heti-skip">GZTime's Blog</div>
         <div class="flink-item-desc">GZ！网安佬</div>
@@ -1194,7 +1194,7 @@
 <div class="flink-list-item">
     <a href="https://shao.fun/" title="Shaofun's Blog" target="_blank">
         <div class="flink-item-icon">
-            <img src="https://img1.imgtp.com/2023/09/24/t3dzOfma.jpg" alt="">
+            <img src="../assets/Shaofun.jpg" alt="">
         </div>
         <div class="flink-item-name heti-skip">Shaofun's Blog</div>
         <div class="flink-item-desc">烧风超强！</div>
@@ -1204,7 +1204,7 @@
 <div class="flink-list-item">
     <a href="https://zmx0142857.github.io/note/" title="Fran's Note" target="_blank">
         <div class="flink-item-icon">
-            <img src="https://img1.imgtp.com/2023/09/24/loCuQEaX.jpg" alt="">
+            <img src="../assets/Fran.jpg" alt="">
         </div>
         <div class="flink-item-name heti-skip">Fran's Note</div>
         <div class="flink-item-desc">Fran笔记好全</div>
