newpage prefix-sum and difference

--- a/site/cs/ald/pnd/index.html
+++ b/site/cs/ald/pnd/index.html
@@ -1313,7 +1313,7 @@ A[i][j] = \sum_i W_i
 S[i][j] = \sum_{x=1}^i\sum_{y=1}^j A[i][j]
 \]</div>
 <p>如图:</p>
-<p><img src="./assets/pnd-2dpresum1.png"></p>
+<p><img src="../assets/pnd-2dpresum1.png"></p>
 <p>容易得出以下递推式:</p>
 <div class="arithmatex">\[
 S[i][j] = S[i-1][j] + S[i][j-1] - S[i-1][j-1] + A[i][j]
@@ -1379,7 +1379,7 @@ S[i][j] = S[i-1][j] + S[i][j-1] - S[i-1][j-1] + A[i][j]
   <small>
     
       最后更新:
-      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2023年10月28日 00:22:07</span>
+      <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2023年10月28日 00:50:47</span>
       
         <br>
         创建日期:
