newpage prefix-sum and difference

--- a/site/cs/ald/index.html
+++ b/site/cs/ald/index.html
@@ -1228,6 +1228,7 @@
 <ul>
 <li><a href="bitcal/">位运算</a></li>
 <li><a href="rnr/">递推与递归</a></li>
+<li><a href="pnd/">前缀和与差分</a></li>
 </ul>
 
   <hr>
