--- a/site/changelog/index.html
+++ b/site/changelog/index.html
@@ -1478,7 +1478,7 @@
             <div class="changelog-content">
 
 
-                  <p><span class="changelog-type changelog-type-newpage"></span> {'text': 'CTF > Knowledge > Stack Overflow > 新增 Format String'}</p>
+                  <p><span class="changelog-type changelog-type-newpage"></span> <a href="/CTF/Knowledge/Format_String">CTF > Knowledge > Stack Overflow > 新增 Format String</a></p>
 
 
             </div>
