--- a/site/cs/index.html
+++ b/site/cs/index.html
@@ -2176,7 +2176,7 @@
         <button onclick="buttonHandler(1)">
             <span class="twemoji" style="margin-right: 4px; font-size: 0.8em;">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M12.78 6.22a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L3.22 7.28a.75.75 0 0 1 1.06-1.06L8 9.94l3.72-3.72a.75.75 0 0 1 1.06 0z"></path></svg>
-            </span>计算机笔记
+            </span>计算机阅读笔记
         </button>
 
     </div>
