--- a/site/index.html
+++ b/site/index.html
@@ -2163,11 +2163,11 @@
 </div>
 
 <div id="statistics">
-    <div style="padding-left: 1em;" markdown="1">
-        页面总数：45  
-        总字数：38636  
-        代码块行数：1510  
-        网站运行时间：<span id="web-time"></span>
+    <div class="statistics-wrapper">
+        <div class="stat-item">页面总数：45</div>
+        <div class="stat-item">总字数：38636</div>
+        <div class="stat-item">代码块行数：1510</div>
+        <div class="stat-item">网站运行时间：<span id="web-time"></span></div>
     </div>
 </div>
 
