--- a/site/sd/jp/index.html
+++ b/site/sd/jp/index.html
@@ -3426,12 +3426,16 @@
 <li>例：本を読みます。（读书。）</li>
 </ul>
 </li>
-<li><strong>「で」</strong> 
-  1. 表示动作或行为发生的场所，后接动词<ul>
-<li>例：図書館で勉強します。（在图书馆学习。）
-  2. 表示动作或行为所使用的方法、工具、手段或材料，后接动词</li>
+<li><strong>「で」</strong> <ol>
+<li>表示动作或行为发生的场所，后接动词<ul>
+<li>例：図書館で勉強します。（在图书馆学习。）</li>
+</ul>
+</li>
+<li>表示动作或行为所使用的方法、工具、手段或材料，后接动词<ul>
 <li>例：バスで行きます。（乘公交去。）</li>
 </ul>
+</li>
+</ol>
 </li>
 <li><strong>～「から」～「まで」</strong> 分别表示动作或行为的起点和终点，可单独使用<ul>
 <li>例：家から学校まで歩きます。（从家走到学校。）</li>
@@ -3511,7 +3515,7 @@
     <span class="md-icon" title="最后更新">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2025年12月14日 00:42:32</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">2026年1月4日 15:27:44</span>
   </span>
 
     
